--- a/chatbot1111.ipynb
+++ b/chatbot1111.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "164e417a-6170-4256-913f-7944d0c3cdee",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     "import math\n",
     "import google.generativeai as genai\n",
     "\n",
-    "load_dotenv(\"/home/harish/Desktop/python/chatbot/.env\")\n",
+    "load_dotenv(\"/home/harish/Desktop/chatbot/.env\")\n",
     "api_key = os.getenv(\"GEMINI_API_KEY\")\n",
     "genai.configure(api_key=api_key) \n",
     "model_name = \"gemini-1.5-flash\"\n",
@@ -31,7 +31,7 @@
     "    return [text[i:i + max_length] for i in range(0, len(text), max_length)]\n",
     "\n",
     "# 1. FIND ALL FILE PATHS (Your code is good)\n",
-    "doc_path = \"/home/harish/Desktop/python/chatbot/docs/**/*\" # Using '/*' is slightly more robust\n",
+    "doc_path = \"/home/harish/Desktop/chatbot/docs/**/*\" # Using '/*' is slightly more robust\n",
     "doc_files = glob.glob(doc_path, recursive=True)\n",
     "\n",
     "# Filter for specific file extensions\n",
@@ -98,29 +98,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "2183ed0c-1051-4ccf-9631-c51b737899dc",
+   "execution_count": 12,
+   "id": "613a0332-620f-49de-84b8-6595145b2954",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The AWS CLI (Command Line Interface) needs to be installed on your local machine or deployment server.  Installation instructions are provided for macOS (using `brew install awscli`), Ubuntu/Debian (using `sudo apt install awscli`), and a cross-platform method using pip (`pip install awscli`).\\n'"
+       "'The AWS CLI (Command Line Interface) can be installed using `brew install awscli` on macOS, `sudo apt install awscli` on Ubuntu/Debian, or `pip install awscli` (cross-platform).  After installation, configure your AWS credentials using `aws configure`.  This will prompt you for your AWS Access Key ID, Secret Access Key, default region name, and default output format.  The credentials are saved in `~/.aws/credentials` and `~/.aws/config`.\\n'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ask_bot(\"explain about aws cli\") # this data is given inside my docs "
+    "ask_bot(\"explain about aws cli\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "7bb14e69-92f8-4c82-a30e-1b614f758b1d",
+   "execution_count": 13,
+   "id": "108619e4-6ac4-4e35-96ee-7679544ea8a6",
    "metadata": {},
    "outputs": [
     {
@@ -129,61 +129,19 @@
        "\"I don't know.\\n\""
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ask_bot(\"kya aapke ghar me pintu hai\")  # this data is not given inside my docs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "d9a30d8c-2130-4624-a8f5-2ee49a0883fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'To create an Auto Scaling Group, go to the EC2 Dashboard → Auto Scaling Groups → Create Auto Scaling Group.  Attach the launch template and set the desired, minimum, and maximum instance counts.\\n'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ask_bot(\"how to create auto scalling group\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "33885b44-e167-40e1-9f1d-01173562c8db",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Yes, the document describes a worker pattern using Sidekiq workers for background job processing in the MGR API.  These workers handle time-consuming operations (data import, email/SMS notifications, file processing, external API integrations, and batch operations) to prevent blocking the main application thread.  The architecture uses Sidekiq integration, and includes structured logging for tracking events.  Testing guidance includes using mocks, real data (via fabricators), authorization checks, and performance testing with realistic data volumes.\\n'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ask_bot(\"do you know worker pettern if yes then explain me about it\")"
+    "ask_bot(\"test of water \") # this information are not given in docs "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "095e803b-8013-4718-8415-0a2e8b27b81f",
+   "id": "d6a078fa-2338-444a-83ec-414aaf3aa191",
    "metadata": {},
    "outputs": [],
    "source": []
