run again and add some instructions

--- a/chatbot1111.ipynb
+++ b/chatbot1111.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "164e417a-6170-4256-913f-7944d0c3cdee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Loaded 855 chunks from 83 documents.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -93,55 +85,17 @@
     "\n",
     "    # Ask Gemini\n",
     "    response = chat_model.generate_content([{\"role\": \"user\", \"parts\": [prompt]}])\n",
-    "    return response.text\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "613a0332-620f-49de-84b8-6595145b2954",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The AWS CLI (Command Line Interface) can be installed using `brew install awscli` on macOS, `sudo apt install awscli` on Ubuntu/Debian, or `pip install awscli` (cross-platform).  After installation, configure your AWS credentials using `aws configure`.  This will prompt you for your AWS Access Key ID, Secret Access Key, default region name, and default output format.  The credentials are saved in `~/.aws/credentials` and `~/.aws/config`.\\n'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ask_bot(\"explain about aws cli\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "108619e4-6ac4-4e35-96ee-7679544ea8a6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"I don't know.\\n\""
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ask_bot(\"test of water \") # this information are not given in docs "
+    "    return response.text\n",
+    "\n",
+    "\n",
+    "    #how to use \n",
+    "    #ask_bot(\"your question\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6a078fa-2338-444a-83ec-414aaf3aa191",
+   "id": "dee0b870-48d1-4b70-ba41-d304caf41f16",
    "metadata": {},
    "outputs": [],
    "source": []
