rerun and ask another question

--- a/chatbot1111.ipynb
+++ b/chatbot1111.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "164e417a-6170-4256-913f-7944d0c3cdee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Loaded 855 chunks from 83 documents.\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -94,8 +102,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dee0b870-48d1-4b70-ba41-d304caf41f16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Based on the provided text, AWS refers to Amazon Web Services.  The document describes setting up Auto Scaling for a Rails application on AWS, utilizing services like EC2, Auto Scaling, and Load Balancing.\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ask_bot(\"what is aws\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cab72809-68d7-4b0e-9ddf-bea19815ac29",
    "metadata": {},
    "outputs": [],
    "source": []
